# aegis-governance

./: .cspell.json  .gitattributes  .gitignore  .lychee.toml  .markdownlint-cli2.yaml  .yamllint.yml  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE-DOCS  NOTICE  README.md  REFERENCES.md  SECURITY.md  SPECIFICATION.md  TERMINOLOGY.md  TRADEMARKS.md  pyproject.toml
.claude/: settings.json
.github/: copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: agp-message-schemas.md  capability-registry-schema.md  config.yml  policy-language.md  reference-runtime-architecture.md  runtime-api.md
.github/scripts/: check_rfc_template.py
.github/workflows/: docs-consistency.yml  docs-lint.yml  markdown-link-check.yml  monthly-release.yml  release-index.yml  release.yml  rfc-placeholder-check.yml  rfc-template-check.yml  schema-sync-check.yml  schema-validation.yml  spellcheck.yml
aegis-core/: README.md
aegis-core/architecture/: AEGIS_Ecosystem_Map.md  AEGIS_Reference_Architecture.md
aegis-core/assets/: AEGIS_logo.ai
aegis-core/constitution/: AEGIS_Constitution.md
aegis-core/faq/: AEGIS_FAQ.md
aegis-core/manifesto/: AEGIS_Manifesto.md
aegis-core/overview/: AEGIS_System_Overview.md
aegis-core/protocol/: AEGIS_AGP1_AUTHENTICATION.md  AEGIS_AGP1_INDEX.md  (+15 more)
aegis-runtime/: CHANGELOG.md  MOVED.md  README.md  pyproject.toml
aegis-runtime/aegis/: __init__.py  audit.py  capability_registry.py  decision_engine.py  exceptions.py  gateway.py  policy_engine.py  protocol.py  runtime.py  tool_proxy.py
aegis-runtime/tests/: test_capability_registry.py  test_decision_engine.py  test_gateway.py  test_integration.py  test_policy_engine.py  test_protocol.py
aiam/: AEGIS_AIAM1_ATTESTATION.md  AEGIS_AIAM1_AUTHORITY.md  AEGIS_AIAM1_CAPABILITIES.md  AEGIS_AIAM1_CONFORMANCE.md  AEGIS_AIAM1_DELEGATION.md  AEGIS_AIAM1_IDENTITY.md  AEGIS_AIAM1_INDEX.md  AEGIS_AIAM1_INTENT.md  AEGIS_AIAM1_INTEROPERABILITY.md  AEGIS_AIAM1_REVOCATION.md  AEGIS_AIAM1_SESSIONS.md  AEGIS_AIAM1_THREAT_MODEL.md
archive/: AEGIS_Governance_Federation_Network.yaml  AEGIS_White_Paper.md
changelog/: 2026-03-05-v0.1.0-architecture-foundation.md  2026-03-07-nist-submission.md  2026-03-13-citation-standards.md  2026-03-13-repository-as-living-paper.md  2026-03-27-atx1-v2.1-ta010.md  2026-04-10-ci-lint-spellcheck-fixes.md  INDEX.md  README.md
claude-project/: aegis-instructions-and-vision.yaml
docs/: 01_AEGIS_Marketing_Overview.md  10_AEGIS_Federated_Governance_Network_AT_Protocol.yaml  AEGIS_ANNOUNCEMENT_READINESS_ASSESSMENT.md  AEGIS_ANNOUNCEMENT_READINESS_CHECKLIST.md  AEGIS_RFC_0001.md  PUBLICATIONS.md  README.md  RELATED_WORK.md
examples/: README.md
federation/: AEGIS_ATPROTO_GOVERNANCE_NETWORK.md  AEGIS_ATPROTO_SCHEMA.md  AEGIS_GFN1_GOVERNANCE_FEEDS.md  AEGIS_GFN1_GOVERNANCE_NETWORK.md  AEGIS_GFN1_NODE_REFERENCE_ARCHITECTURE.md  AEGIS_GFN1_SCHEMA.md  AEGIS_GFN1_TRUST_MODEL.md  AEGIS_NODE_REFERENCE_ARCHITECTURE.md  README.md
protocol/: AEGIS_Governance_Protocol_AGP1.md
rfc/: AEGIS_RFC_0001.md  AEGIS_RFC_0003.md  README.md  RFC-0000-PLACEHOLDER.md  RFC-0000-TEMPLATE.md  RFC-0001-AEGIS-Architecture.md  RFC-0002-Governance-Runtime.md  RFC-0003-Capability-Registry.md  RFC-0004-Governance-Event-Model.md  RFC-0005-Reference-Deployment-Patterns.md  RFC-0006-Claude-Code-Plugin.md  RFC-0007-Operational-Considerations.md  RFC-0008-Federation-Network-Protocol.md  RFC-0009-Prior-Art-and-External-Validation-Record.md  RFC-0009-Test.md  RFC-0010-State-Dump-Protocol-Formalization.md  RFC-0011-Authority-Binding-Sub-Spec-Revision.md  RFC-0012-ATX1-v2-Taxonomy-Normalization.md  RFC-0013-ACF1-Control-Framework.md  RFC-0014-ATX1-Dual-Licensing.md  RFC-0015-Runtime-Consolidation.md  RFC-0016-Cross-Domain-Machine-Discovery.md  RFC-0017-Commit-Boundary-and-Binding-Validation.md  RFC-0018-Automated-Governance-Attestation-Protocol.md  RFC-0019-AIAM-1-Identity-Access-Management-AI-Agents.md
scripts/: add-v22-subtechniques.py  fix-atx-source-encoding.mjs  sync-canonical-schemas.py  update-navigator-v22.py  update-stix-v22.py  validate-doc-headers.py
site/: .gitignore  VERSION  astro.config.mjs  package-lock.json  package.json
(+241 files in other folders)
