[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aegis-governance"
version = "0.1.0"
description = "AEGIS - Architectural Enforcement & Governance of Intelligent Systems"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
keywords = ["governance", "ai", "policy", "security", "audit"]
authors = [
    { name = "Kenneth Tannenbaum", email = "finnoybu@users.noreply.github.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/finnoybu/aegis-governance"
Repository = "https://github.com/finnoybu/aegis-governance"
Documentation = "https://github.com/finnoybu/aegis-governance/blob/main/SPECIFICATION.md"
Discussions = "https://github.com/finnoybu/aegis-governance/discussions"
Issues = "https://github.com/finnoybu/aegis-governance/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.21",
    "black>=23.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
    "isort>=5.12",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["aegis*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["aegis"]
omit = ["tests/*"]
