[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aegis-runtime"
version = "0.1.0"
description = "Reference Python implementation of the AEGIS governance runtime."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "Kenneth Tannenbaum", email = "finnoybu@users.noreply.github.com" }
]

requires-python = ">=3.10"

keywords = [
  "ai",
  "ai-governance",
  "security",
  "policy-engine",
  "capability-security",
  "ai-safety"
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Security",
  "Topic :: Software Development :: Libraries",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: Apache Software License"
]

dependencies = []

[project.urls]
Homepage = "https://github.com/aegis-initiative/aegis-governance"
Repository = "https://github.com/aegis-initiative/aegis-governance"
Documentation = "https://github.com/aegis-initiative/aegis-governance/blob/main/SPECIFICATION.md"
Discussions = "https://github.com/aegis-initiative/aegis-governance/discussions"
Issues = "https://github.com/aegis-initiative/aegis-governance/issues"

[tool.setuptools]
packages = ["aegis"]

[tool.pytest.ini_options]
testpaths = ["tests"]